Adding routes to individual job

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         body{
           background: #f5f6f8;
         }
+        * a{
+          text-decoration: none;
+        }
+        #root{
+          /* width: 100vw; */
+          max-width: 1380px;
+          margin: 0 auto;
+        }
       </style>
   </head>
   <body>
