Feature: Add dark mode

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         :root{
           --blue: #5964e0;
           --light-blue: #949bf5;
+          --dark: #19202d;
         }
         body{
           background: #f5f6f8;
