--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         *{
           box-sizing: border-box;
           font-family: "Khumb Sans", sans-serif;
+          transition: 2s;
         }
         :root{
           --blue: #5964e0;
