--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           --dark: #19202d;
         }
         body{
-          background: #f5f6f8;
+          background: #000;
         }
         * a{
           text-decoration: none;
